# fcitx4

./: CMakeLists.txt  Doxyfile.in  README  README.md  clean.sh  groups  project.config
.github/ISSUE_TEMPLATE/: bug_report.md
.tx/: config
data/: config.desc  fcitx-configtool.desktop.in  fcitx.desktop.in  profile.desc  punc.mb.zh_CN  punc.mb.zh_HK  punc.mb.zh_TW
data/script/: CMakeLists.txt  fcitx-autostart  fcitx-diagnose.sh  fcitx-wayland-start.sh
debian/: README.source  changelog  control  control.in  docs  fcitx-bin.install  fcitx-data.install  fcitx-data.postinst  fcitx-defaultim.install  fcitx-frontend-gtk3.install  fcitx-implugin.install  fcitx-libs-dev.install  fcitx-modules.install  fcitx-onboard.install  fcitx-table-wubi.doc-base  fcitx-ui-classic.install  gencontrol.mk  gir1.2-fcitx-1.0.install.in  libfcitx-config4.symbols  libfcitx-core0.symbols  libfcitx-gclient1.symbols  libfcitx-qt0.symbols  libfcitx-utils0.symbols  rules  variables.mk  watch
debian/patches/: 0001-add-nodisplay.patch.patch  0001-try-to-avoid-rpath.patch  0002-Update-fcitx.desktop.in.patch  0002-wait-dbus-up-to-20-times.patch  0003-translate-fcitx-to-chinese.patch.patch  0004-Disable-IMSwitchKey-and-SendTextWhenSwitchEng.patch  0004-forget-to-bump-version.patch  0005-set-config.desc-IMSwitchIncludeInactive.patch  0006-misc-fix-fall-through-warning.patch  0006-update-series.patch  0007-Fix-some-spelling-errors.patch  0007-set-IMSwitchKey-to-True.patch  0007-xkb-use-iso-codes-json-file-to-parse-the-iso-codes-d.patch  0008-.patch  0008-keyboard-iso-code-root-should-be-639-3.patch  0009-.patch  0009-Fix-input-config.patch  0010-Type-fix-19882.patch  0011-Type-fix-23661.patch  0012-chore.patch  0013-Fix.patch  0014-Fix.patch  0015-Fix.patch  0016-fix-change-default-input-method-active-state.patch  0017-Fix-Remove-the-configure-current-input-method-option.patch  0018-fix-dock.patch  0019-Revert-fix-dock.patch  0020-.patch  0021-TaskID-22252-TR-SP1-Kirin990-uos-20-KLU-daliy-202005.patch  0022-.patch  0023-.patch  0024-30.patch  0025-fix-modify-version.patch  0026-fix-delete-debin-.patch.patch  0027-fix-add-patch.patch  0028-fix-add-remove-patch.patch  0029-fix-dbusmenu.c.patch  deepin-active-input-method-default.patch  deepin-fcitx-fontsize-max-nolimit.patch  deepin-fcitx-icon-change-to-keyboard.patch  (+6 more)
doc/man/: CMakeLists.txt  fcitx-implugin.1  fcitx-switch-default.1
po/: az.po  bo.po  bo_CN.po  ca.po  da.po  de.po  en.po  es.po  fcitx.pot  fr.po  hu.po  ja.po  ko.po  pl.po  ru.po  sq.po  ug.po  ug_CN.po  uk.po  zh_CN.po  zh_HK.po  zh_TW.po
rpm/: 99_fcitx.sh  fcitx.spec  xinput-fcitx
skin/: CMakeLists.txt
src/core/: errorhandler.c  errorhandler.h  fcitx.c
src/frontend/ipc/: ipc.c
src/frontend/ipcportal/: ipcportal.c
src/frontend/qt/: fcitxinputcontextproxy.cpp  fcitxqtdbustypes.cpp  fcitxwatcher.cpp  qfcitxinputcontext.cpp
src/frontend/xim/: IC.c  IC.h  xim.c  xim.h  ximhandler.c  ximhandler.h  ximqueue.c
src/im/keyboard/: fcitx-keyboard.conf.in  isocodes.c  isocodes.h  keyboard.c  keyboard.h
src/im/pinyin/: PYFA.c  PYFA.h  fcitx-pinyin.desc  py.c  py.h  pyMapTable.c  pyMapTable.h  pyParser.c  pyParser.h  pyconfig.c  pyconfig.h  pydef.h  pysplitdata.h  sp.c  sp.h  spdata.h
src/im/qw/: qw.c
src/im/table/: table.c  table.h  tableconfig.c  tabledict.c  tabledict.h  utf8_in_gb18030.h
src/lib/: CMakeLists.txt
src/lib/fcitx/: addon-internal.h  addon.c  addon.h  candidate-internal.h  candidate.c  candidate.h  configfile.c  configfile.h  context-internal.h  context.c  context.h  fcitx-internal.h  fcitx.h  frontend.c  frontend.h  hook-internal.h  hook.c  hook.h  ime-internal.h  ime.c  ime.h  instance-internal.h  instance.c  instance.h  keys.c  keys.h  module-internal.h  module.c  module.h  profile.c  profile.h  ui.c  (+2 more)
src/lib/fcitx-config/: fcitx-config.c  fcitx-config.h  hotkey.c  hotkey.h  keydata.h  sprintf.c  xdg.c  xdg.h
src/lib/fcitx-gclient/: fcitxinputmethod.c  fcitxkbd.c
src/lib/fcitx-qt/: fcitxqt_export.h  fcitxqtconfiguifactory.cpp  fcitxqtconfiguifactory.h  fcitxqtconfiguiplugin.h  fcitxqtconfiguiwidget.h  fcitxqtconnection.cpp  fcitxqtconnection.h  fcitxqtconnection_p.h  fcitxqtformattedpreedit.cpp  fcitxqtformattedpreedit.h  fcitxqtinputcontextproxy.cpp  fcitxqtinputcontextproxy.h  fcitxqtinputmethoditem.cpp  fcitxqtinputmethoditem.h  fcitxqtinputmethodproxy.cpp  fcitxqtinputmethodproxy.h  fcitxqtkeyboardlayout.cpp  fcitxqtkeyboardlayout.h  fcitxqtkeyboardproxy.cpp  fcitxqtkeyboardproxy.h  fcitxqtkeysequencewidget.cpp  fcitxqtkeysequencewidget.h  qtkeytrans.cpp
src/lib/fcitx-utils/: CMakeLists.txt  bitset.h  desktop-parse.c  desktop-parse.h  handler-table.c  handler-table.h  keysym.h  log.c  log.h  memory.c  memory.h  msort_r.c  objpool.c  objpool.h  qsort_r.c  sort_common.h  stringmap.c  stringmap.h  utarray.h  utf8.c  utf8.h  uthash.h  utils.c  utils.h
src/module/: CMakeLists.txt
src/module/defaultim/: CMakeLists.txt  defaultim.c  fcitx-defaultim.conf.in  fcitx-defaultim.desc  fcitx-switch-default.c  minIni.h  switch-fcitx-default.c
src/module/implugin/: CMakeLists.txt  fcitx-implugin.conf.in  fcitx-implugin.desc  gsettings-tool.c  implugin-service-mb.c  implugin-service-so.c  implugin-service.c  implugin.c  minGlue.h  minIni.c
test/: CMakeLists.txt  testarray.c  testarray.h  testbacktrace.c  testbacktrace.h  testcast.c  testcast.h  testconfig.c  testdbuslaunch.c  testdbuslaunch.h  testdbussocket.c  testenv.c  testenv.h  testhandlertable.c  testhandlertable.h  testhash.c  testhash.h  testhotkey.c  testhotkey.h  testmain.c  testmessage.c  testmessage.h  testobjpool.c  testobjpool.h  testpinyin.c  testpinyin.h  testrewritefile.c  testrewritefile.h  testsort.c  testsort.h  teststring.c  teststring.h  testunicode.c  testutf8.c  testutf8.h  testxdg.c  testxdg.h
tools/cli/: createPYMB.c  fcitx-path-maker.c  fcitx-remote.c  mb2org.c  mb2txt.c  pyTools.c  pyTools.h  readPYBase.c  readPYMB.c  scel2org.c  txt2mb.c
tools/dev/: fcitx-po-parser.c  fcitx-scanner.c
(+153 files in other folders)
